--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.1.0",
   "description": "Package developer tool to search all published keybindings",
   "activationEvents": ["search-all-keybindings:open"],
-  "repository": "https://github.com/atom/test-package",
+  "repository": "https://github.com/mark-hahn/search-all-keybindings",
   "license": "MIT",
   "engines": {
-    "atom": ">0.50.0"
+    "atom": ">0.120.0"
   },
   "dependencies": {
     "emissary": "^1.3.1",
