--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "search-all-keybindings",
   "main": "./lib/main",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "Package developer tool to search all published keybindings",
   "activationEvents": ["search-all-keybindings:open"],
   "repository": "https://github.com/mark-hahn/search-all-keybindings",
@@ -10,9 +10,11 @@
     "atom": ">0.120.0"
   },
   "dependencies": {
-    "emissary": "^1.3.1",
+    "sub-atom": "*",
     "request":  "~2.0.0",
-    "moment":   ">2.4.0"
+    "moment":   ">2.4.0",
+    "space-pen": "*",
+    "atom-space-pen-views": "*"
   }
 }
 
