Updated activationEvents to activationCommands

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "./lib/main",
   "version": "0.1.3",
   "description": "Package developer tool to search all published keybindings",
-  "activationEvents": ["search-all-keybindings:open"],
+  "activationCommands": ["search-all-keybindings:open"],
   "repository": "https://github.com/mark-hahn/search-all-keybindings",
   "license": "MIT",
   "engines": {
@@ -17,4 +17,3 @@
     "atom-space-pen-views": "*"
   }
 }
-
