--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "name": "search-all-keybindings",
   "main": "./lib/main",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Package developer tool to search all published keybindings",
-  "activationEvents": ["search-all-keybindings:open"],
+  "activationEvents": [
+    "search-all-keybindings:open"
+  ],
   "repository": "https://github.com/mark-hahn/search-all-keybindings",
   "license": "MIT",
   "engines": {
-    "atom": ">0.120.0"
+    "atom": ">0.170.0"
   },
   "dependencies": {
-    "sub-atom": "*",
-    "request":  "~2.0.0",
-    "moment":   ">2.4.0",
+    "atom-space-pen-views": "*",
+    "jquery": "^2.1.4",
+    "moment": ">2.4.0",
+    "request": "~2.0.0",
     "space-pen": "*",
-    "atom-space-pen-views": "*"
+    "sub-atom": "*"
   }
 }
-
